# MCP1

./: .env  README.md  main.py  pyproject.toml  rag.py  requirements.txt
.cursor/: mcp.json
